--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </section>
 
       <div class="greeting">
-        When you need professional junk removal in Hampton or Newport News VA.
+        When you need professional Junk Removal &  Cleaning
         Call <span style="text-decoration: underline"> B&G JUNK REMOVAL</span>
         your local pros!
       </div>
