--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="third"></div>
         </div>
         <div class="greeting">
-          Choose us, for proffesional service you won't find anywhere else.
+         JUNK INCLUDES ITEMS THAT ARE NO LONGER WANTED OR NEEDED.
         </div>
       </section>
       <!--ABOUT SECTION STARTS-->
