--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
           <h2>AREAS OF SERVICE</h2>
         </div>
         <h3>
-          Give us a call to book
-          <a href="tel:602 900 27609">602-900-2760</a>
+          Donation Pick Up? Moving? Renovation? 
+          <a href="tel:602 900 27609">602-900-2760</a> 
+          Give Us a Call
         </h3>
         <div class="iframe-wrapper">
           <div class="container">
